Fixed some shit bro idfk at this point, theres alot.